Move usage example to proper place (thanks to Mark Wiesemann for a heads up) Add usage example to package.xml
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/trunk@233934 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -231,6 +231,11 @@ Other resources to consider:
      <tasks:replace from="@package_version@" to="version" type="package-info" />
     </file>
    </dir> <!-- /tests -->
+   <dir name="docs">
+    <dir name="examples">
+     <file role="doc" name="basic-elements.php" />
+	</dir> <!-- /docs/examples -->
+   </dir> <!-- /docs -->
    <file name="QuickForm2.php" role="php">
     <tasks:replace from="@package_version@" to="version" type="package-info" />
    </file>
