* Replaced startContainer() / finishContainer() and startForm() / finishForm() with renderContainer() and renderForm()   * Elements' render() methods now return renderer instance   * Added renderer plugin infrastructure, renderers are now singletons to be created via HTML_QuickForm2_Renderer::getInstance()
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/branches/AVB_RENDERERS@288127 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -118,6 +118,14 @@ Other resources to consider:
       <tasks:replace from="@package_version@" to="version" type="package-info" />
      </file>
     </dir> <!-- /QuickForm2/Element -->
+    <dir name="Renderer">
+     <file name="Default.php" role="php">
+      <tasks:replace from="@package_version@" to="version" type="package-info" />
+     </file>
+     <file name="Plugin.php" role="php">
+      <tasks:replace from="@package_version@" to="version" type="package-info" />
+     </file>
+    </dir> <!-- /QuickForm2/Renderer -->
     <dir name="Rule">
      <file name="Callback.php" role="php">
       <tasks:replace from="@package_version@" to="version" type="package-info" />
@@ -163,6 +171,9 @@ Other resources to consider:
      <tasks:replace from="@package_version@" to="version" type="package-info" />
     </file>
     <file name="Node.php" role="php">
+     <tasks:replace from="@package_version@" to="version" type="package-info" />
+    </file>
+    <file name="Renderer.php" role="php">
      <tasks:replace from="@package_version@" to="version" type="package-info" />
     </file>
     <file name="Rule.php" role="php">
