Example runs, CSS needs some further research
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/trunk@288166 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -306,7 +306,7 @@ Bug fixes:
    <dir name="docs/examples">
     <file role="doc" name="basic-elements.php" />
     <file role="doc" name="builtin-rules.php" />
-    <!-- file role="doc" name="default-renderer.php" / -->
+    <file role="doc" name="default-renderer.php" />
    </dir> <!-- /docs/examples -->
    <file name="QuickForm2.php" role="php">
     <tasks:replace from="@package_version@" to="version" type="package-info" />
