Moved class loading methods to a separate class, added a rudimentary autoload implementation loadClass() will now try to load a file with name conforming to PEAR standards rather than throw an exception if file name wasn't explicitly given Added setOption()/getOption() methods to base Renderer class, removed Renderer_Default::setOptions() Fixed name of base renderer class
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/trunk@288314 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -158,6 +158,9 @@ Bug fixes:
     <file name="Factory.php" role="php">
      <tasks:replace from="@package_version@" to="version" type="package-info" />
     </file>
+    <file name="Loader.php" role="php">
+     <tasks:replace from="@package_version@" to="version" type="package-info" />
+    </file>
     <file name="Node.php" role="php">
      <tasks:replace from="@package_version@" to="version" type="package-info" />
     </file>
