Yet Another Renderer Rewrite:   * Instead of adding plugins to a renderer, the renderer and its plugins are aggregated in a proxy. This allowed us to get rid of inheritance ugliness: all renderer methods and properties can now be defined as 'public', but they won't be available to the outside world (unless explicitly asked), only to plugins.   * Got rid of Singleton ugliness also, removed unneeded getters from Default renderer.   * Changed back renderContainer() and friends to startContainer() / finishContainer()
Other fixes:
  * Require 'PHPUnit/Framework.php' rather than 'PHPUnit/Framework/TestSuite.php' in unit tests, the latter broke in PHPUnit 3.4
  * Depend on PEAR installer 1.5.4


git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/trunk@288534 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -113,6 +113,9 @@ Bug fixes:
      <file name="Plugin.php" role="php">
       <tasks:replace from="@package_version@" to="version" type="package-info" />
      </file>
+     <file name="Proxy.php" role="php">
+      <tasks:replace from="@package_version@" to="version" type="package-info" />
+     </file>
     </dir> <!-- /QuickForm2/Renderer -->
     <dir name="Rule">
      <file name="Callback.php" role="php">
@@ -340,7 +343,7 @@ Bug fixes:
     <min>5.2.0</min>
    </php>
    <pearinstaller>
-    <min>1.4.3</min>
+    <min>1.5.4</min>
    </pearinstaller>
    <package>
     <name>HTML_Common2</name>
