* Implemented Array Renderer with unit tests  * Updated some other renderer-related phpdoc  * Clarified rule-chaining example in builtin-rules.php
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/trunk@288991 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -107,6 +107,9 @@ Bug fixes:
      </file>
     </dir> <!-- /QuickForm2/Element -->
     <dir name="Renderer">
+     <file name="Array.php" role="php">
+      <tasks:replace from="@package_version@" to="version" type="package-info" />
+     </file>
      <file name="Default.php" role="php">
       <tasks:replace from="@package_version@" to="version" type="package-info" />
      </file>
@@ -244,6 +247,9 @@ Bug fixes:
      </dir> <!-- /tests/QuickForm2/Element -->
      <dir name="Renderer">
       <file name="AllTests.php" role="test">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
+      <file name="ArrayTest.php" role="test">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
       <file name="DefaultTest.php" role="test">
