Forgot to update notes for 0.3.0
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/trunk@288992 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -32,6 +32,14 @@
  <notes>
 Milestone 3: renderers and groups
 
+Major additions and changes
+  * Renderers implemented, Default and Array renderers ported from QuickForm 3.x
+  * Groups implemented
+
+Feature requests addressed:
+  * Default rendering without tables (request #9116)
+  * setSeparator() method (request #9942)
+
 Bug fixes:
   * Updated PHP dependency to 5.2.0 (bug #14110, PHP bug #37632)
   * 'checked' attributed on checkboxes and radios was not updated after changing
