An example of a custom element with a renderer plugin for its output, much simpler version of element from advmultiselect subpackage for QF 3.x
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/trunk@289051 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -342,6 +342,9 @@ Bug fixes:
      <tasks:replace from="@data_dir@" to="data_dir" type="pear-config" />
     </file>
     <file role="doc" name="default-renderer.php" />
+    <file role="doc" name="dualselect.php">
+     <tasks:replace from="@data_dir@" to="data_dir" type="pear-config" />
+    </file>
    </dir> <!-- /docs/examples -->
    <dir name="data">
     <file name="quickform.css" role="data" />
