Deprecated Rule::getOptions() / Rule::setOptions() in favour of getConfig() / setConfig(). Reason: nothing "optional" about 'em, most of Rules don't work without configuration given.
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/trunk@289087 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -45,6 +45,11 @@ Bug fixes:
   * 'checked' attributed on checkboxes and radios was not updated after changing
     'value' attribute (bug #15708)
 
+Deprecated features:
+  * setOptions() and getOptions() methods of HTML_QuickForm2_Rule are
+    deprecated and will be removed in the next release. Use setConfig() and
+    getConfig() instead.
+
 WARNING: next release will have backwards compatibility breaks in setting Rule
 configuration data. If you are just using built-in Rules you should not be
 affected, but if you wrote custom subclasses for HTML_QuickForm2_Rule then pay 
