Implemented "Each" Rule that applies a template Rule to all elements in a Container. This is mostly inspired by addGroupRule() from QuickForm 3.x Also added forgotten 'require_once "Rule.php"' to a couple of Rule subclasses
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/trunk@289977 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -145,6 +145,9 @@ special attention to changes in SVN.
      <file name="Compare.php" role="php">
       <tasks:replace from="@package_version@" to="version" type="package-info" />
      </file>
+     <file name="Each.php" role="php">
+      <tasks:replace from="@package_version@" to="version" type="package-info" />
+     </file>
      <file name="Empty.php" role="php">
       <tasks:replace from="@package_version@" to="version" type="package-info" />
      </file>
@@ -282,6 +285,9 @@ special attention to changes in SVN.
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
       <file name="CompareTest.php" role="test">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
+      <file name="EachTest.php" role="test">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
       <file name="EmptyTest.php" role="test">
