Ported all builtin action handlers and wizard example from old QF_Controller Todo: tests, rest of examples, setDefaultAction(), data sources
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/trunk@293411 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -67,6 +67,26 @@ special attention to changes in SVN.
      </file>
     </dir> <!-- /QuickForm2/Container -->
     <dir name="Controller">
+     <dir name="Action">
+      <file name="Back.php" role="php">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
+      <file name="Direct.php" role="php">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
+      <file name="Display.php" role="php">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
+      <file name="Jump.php" role="php">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
+      <file name="Next.php" role="php">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
+      <file name="Submit.php" role="php">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
+     </dir> <!-- /QuickForm2/Controller/Action -->
      <file name="Action.php" role="php">
       <tasks:replace from="@package_version@" to="version" type="package-info" />
      </file>
@@ -368,6 +388,11 @@ special attention to changes in SVN.
     </file>
    </dir> <!-- /tests -->
    <dir name="docs/examples">
+    <dir name="controller">
+     <file name="wizard.php" role="doc">
+      <tasks:replace from="@data_dir@" to="data_dir" type="pear-config" />
+     </file>
+    </dir> <!-- /docs/examples/controller -->
     <file role="doc" name="basic-elements.php">
      <tasks:replace from="@data_dir@" to="data_dir" type="pear-config" />
     </file>
