--- a/package.xml
+++ b/package.xml
@@ -90,6 +90,9 @@ special attention to changes in SVN.
      <file name="Action.php" role="php">
       <tasks:replace from="@package_version@" to="version" type="package-info" />
      </file>
+     <file name="DefaultAction.php" role="php">
+      <tasks:replace from="@package_version@" to="version" type="package-info" />
+     </file>
      <file name="Page.php" role="php">
       <tasks:replace from="@package_version@" to="version" type="package-info" />
      </file>
@@ -392,6 +395,7 @@ special attention to changes in SVN.
      <file name="wizard.php" role="doc">
       <tasks:replace from="@data_dir@" to="data_dir" type="pear-config" />
      </file>
+     <file name="empty.gif" role="doc" />
     </dir> <!-- /docs/examples/controller -->
     <file role="doc" name="basic-elements.php">
      <tasks:replace from="@data_dir@" to="data_dir" type="pear-config" />
