Added unit tests for QF2_Controller_Page class, implemented forgotten ID propagation Added ability to iterate over pages of the form
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/trunk@293660 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -248,6 +248,14 @@ special attention to changes in SVN.
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
      </dir> <!-- /tests/QuickForm2/Container -->
+     <dir name="Controller">
+      <file name="AllTests.php" role="test">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
+      <file name="PageTest.php" role="test">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
+     </dir> <!-- /tests/QuickForm2/Controller -->
      <dir name="DataSource">
       <file name="AllTests.php" role="test">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
