--- a/package.xml
+++ b/package.xml
@@ -96,6 +96,9 @@ special attention to changes in SVN.
      <file name="Page.php" role="php">
       <tasks:replace from="@package_version@" to="version" type="package-info" />
      </file>
+     <file name="SessionContainer.php" role="php">
+      <tasks:replace from="@package_version@" to="version" type="package-info" />
+     </file>
     </dir> <!-- /QuickForm2/Controller -->
     <dir name="DataSource">
      <file name="Array.php" role="php">
@@ -400,6 +403,9 @@ special attention to changes in SVN.
    </dir> <!-- /tests -->
    <dir name="docs/examples">
     <dir name="controller">
+     <file name="simple.php" role="doc">
+      <tasks:replace from="@data_dir@" to="data_dir" type="pear-config" />
+     </file>
      <file name="wizard.php" role="doc">
       <tasks:replace from="@data_dir@" to="data_dir" type="pear-config" />
      </file>
