Another test for QF2_Controller...
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/trunk@294028 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -282,6 +282,9 @@ Backwards compatibility issues
        <file name="DirectTest.php" role="test">
         <tasks:replace from="@package_version@" to="version" type="package-info" />
        </file>
+       <file name="DisplayTest.php" role="test">
+        <tasks:replace from="@package_version@" to="version" type="package-info" />
+       </file>
       </dir>
       <file name="AllTests.php" role="test">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
