Added tests for Jump action handler, it now properly handles all relevant examples from RFC 3986 section 5.4
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/trunk@294039 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -285,6 +285,9 @@ Backwards compatibility issues
        <file name="DisplayTest.php" role="test">
         <tasks:replace from="@package_version@" to="version" type="package-info" />
        </file>
+       <file name="JumpTest.php" role="test">
+        <tasks:replace from="@package_version@" to="version" type="package-info" />
+       </file>
       </dir>
       <file name="AllTests.php" role="test">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
